Fix SonarCloud Quality Gate: reduce duplication, code smells, security hotspot
- Extract AbstractJdbcService base class with shared openConnection(),
  ensureSchema(), and loadInitScript() to eliminate duplication across
  all 5 JDBC services (reduces new-code duplication below 3%)
- Fix security hotspot: replace hardcoded plaintext passwords with
  BCrypt-hashed defaults in JdbcUserService
- Extract duplicate string literals into constants: STATUS_ACTIVE,
  ROOM_BEDROOM, ROOM_HALLWAY, HALLWAY_SENSOR, ALERT_TITLE_ERROR
- Reduce cognitive complexity of JdbcRoomService.renameDevice by
  extracting helper methods
- Use Animation.INDEFINITE instead of Timeline.INDEFINITE
- Replace Stream.collect(Collectors.toList()) with Stream.toList()
- Replace \n with %n in String.format calls
- Simplify isBlocked() to remove always-true expression
- Use Random.nextInt() instead of Math.random() cast

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>